@@ -564,6 +564,10 @@ extern "C" {
 #define REPLACEFILE_IGNORE_MERGE_ERRORS 0x00000002
 #endif /* (_WIN32_WINNT >= 0x0500) */
 #define WRITE_WATCH_FLAG_RESET 1
+#if (_WIN32_WINNT >= 0x0601)
+#define PROCESS_DEP_ENABLE 1
+#define PROCESS_DEP_DISABLE_ATL_THUNK_EMULATION 2
+#endif
 
 #ifndef RC_INVOKED
 typedef struct _FILETIME {
@@ -1058,6 +1062,14 @@ typedef enum _COMPUTER_NAME_FORMAT {
 #if (_WIN32_WINNT >= 0x0500 || _WIN32_WINDOWS >= 0x0410)
 typedef DWORD EXECUTION_STATE;
 #endif
+#if (_WIN32_WINNT >= 0x0601)
+typedef enum _DEP_SYSTEM_POLICY_TYPE {
+	AlwaysOn,
+	AlwaysOff,
+	OptIn,
+	OptOut 
+} DEP_SYSTEM_POLICY_TYPE;
+#endif
 
 typedef DWORD(WINAPI *LPPROGRESS_ROUTINE)(LARGE_INTEGER,LARGE_INTEGER,LARGE_INTEGER,LARGE_INTEGER,DWORD,DWORD,HANDLE,HANDLE,LPVOID);
 typedef void(WINAPI *LPFIBER_START_ROUTINE)(PVOID);
@@ -1499,6 +1511,9 @@ WINBASEAPI BOOL WINAPI GetPrivateProfileStructA(LPCSTR,LPCSTR,LPVOID,UINT,LPCSTR
 WINBASEAPI BOOL WINAPI GetPrivateProfileStructW(LPCWSTR,LPCWSTR,LPVOID,UINT,LPCWSTR);
 WINBASEAPI FARPROC WINAPI GetProcAddress(HINSTANCE,LPCSTR);
 WINBASEAPI BOOL WINAPI GetProcessAffinityMask(HANDLE,PDWORD,PDWORD);
+#if (_WIN32_WINNT >= 0x0601)
+WINBASEAPI BOOL WINAPI GetProcessDEPPolicy (HANDLE, LPDWORD, PBOOL);
+#endif
 #if (_WIN32_WINNT >= 0x0501)
 WINBASEAPI BOOL WINAPI GetProcessHandleCount(HANDLE,PDWORD);
 #endif
@@ -1538,6 +1553,9 @@ WINBASEAPI PUCHAR WINAPI GetSidSubAuthorityCount(PSID);
 WINBASEAPI VOID WINAPI GetStartupInfoA(LPSTARTUPINFOA);
 WINBASEAPI VOID WINAPI GetStartupInfoW(LPSTARTUPINFOW);
 WINBASEAPI HANDLE WINAPI GetStdHandle(DWORD);
+#if (_WIN32_WINNT >= 0x0601)
+WINBASEAPI DEP_SYSTEM_POLICY_TYPE WINAPI GetSystemDEPPolicy (void);
+#endif
 WINBASEAPI UINT WINAPI GetSystemDirectoryA(LPSTR,UINT);
 WINBASEAPI UINT WINAPI GetSystemDirectoryW(LPWSTR,UINT);
 WINBASEAPI VOID WINAPI GetSystemInfo(LPSYSTEM_INFO);
@@ -1923,6 +1941,9 @@ WINBASEAPI BOOL WINAPI SetNamedPipeHandleState(HANDLE,PDWORD,PDWORD,PDWORD);
 WINBASEAPI BOOL WINAPI SetPriorityClass(HANDLE,DWORD);
 WINBASEAPI BOOL WINAPI SetPrivateObjectSecurity(SECURITY_INFORMATION,PSECURITY_DESCRIPTOR,PSECURITY_DESCRIPTOR *,PGENERIC_MAPPING,HANDLE);
 WINBASEAPI BOOL WINAPI SetProcessAffinityMask(HANDLE,DWORD);
+#if (_WIN32_WINNT >= 0x0601)
+WINBASEAPI BOOL WINAPI SetProcessDEPPolicy (DWORD);
+#endif
 WINBASEAPI BOOL WINAPI SetProcessPriorityBoost(HANDLE,BOOL);
 WINBASEAPI BOOL WINAPI SetProcessShutdownParameters(DWORD,DWORD);
 WINBASEAPI BOOL WINAPI SetProcessWorkingSetSize(HANDLE,SIZE_T,SIZE_T);
